--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
     <div class="row">
       <div class="col-auto">
         <h1 class="aboutus-h2">About Us</h1>
-        <img class="aboutusimg" src="images/aboutus.jpg" alt="About Us">
+        <img class="aboutusimg" src="aboutus.jpg" alt="About Us">
       </div>
       <div class="col-auto">
         <h1 class="aboutusheading">Developing High-quality Apps</h1>
@@ -354,7 +354,7 @@
       <div class="project-box">
         <div class="project-box-inner">
           <div class="project-box-front">
-            <img class="project-img" src="images/woodlandsprimarycare.png" alt="Paris">
+            <img class="project-img" src="woodlandsprimarycare.png" alt="Paris">
           </div>
           <div class="project-box-back">
             <h4 class="project-heading">Woodlands Primary Care <br><a class="link" href="http://woodlandsprimarycare.com"><i class="fas fa-external-link-alt"></i></a></h4>
@@ -371,7 +371,7 @@
       <div class="project-box">
         <div class="project-box-inner">
           <div class="project-box-front">
-            <img class="project-img" src="images/skillrealty.png" alt="Paris">
+            <img class="project-img" src="skillrealty.png" alt="Paris">
           </div>
           <div class="project-box-back">
             <h4 class="project-heading">Skill <br> Realty <br><a class="link" href="http://woodlandsprimarycare.com"><i class="fas fa-external-link-alt"></i></a></h4>
@@ -386,7 +386,7 @@
       <div class="project-box">
         <div class="project-box-inner">
           <div class="project-box-front">
-            <img class="project-img" src="images/skillrealty.jpg" alt="Paris">
+            <img class="project-img" src="skillrealty.png" alt="Paris">
           </div>
           <div class="project-box-back">
             <h4 class="project-heading">CMT <br> On Progress</h4>
@@ -416,7 +416,7 @@
       <div class="col-lg-4 col-md-6 col-sm-12 item">
         <div class="team-item item-style">
           <div class="team-item-img">
-            <img class="head" src="images/teammember1.jpg" alt="">            
+            <img class="head" src="teammember1.jpg" alt="">            
           </div>
           <div class="team-item-info">
             <h4 class="team-item-title item-title">Subash Kumar K S</h4>
@@ -441,7 +441,7 @@
       <div class="col-lg-4 col-md-6 col-sm-12 item">
         <div class="team-item item-style">
           <div class="team-item-img">
-            <img class="head" src="images/teammember1.jpg" alt="">            
+            <img class="head" src="teammember1.jpg" alt="">            
           </div>
           <div class="team-item-info">
             <h4 class="team-item-title item-title">Subash Kumar K S</h4>
@@ -466,7 +466,7 @@
       <div class="col-lg-4 col-md-6 col-sm-12 item">
         <div class="team-item item-style">
           <div class="team-item-img">
-            <img class="head" src="images/teammember1.jpg" alt="">            
+            <img class="head" src="teammember1.jpg" alt="">            
           </div>
           <div class="team-item-info">
             <h4 class="team-item-title item-title">Subash Kumar K S</h4>
